Fix overflow issue in event table

--- a/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
+++ b/ESSArch_TP/frontend/static/frontend/styles/modules/index.scss
@@ -733,7 +733,6 @@ input[type="checkbox"] {
 }
 .table-container {
     position: relative;
-    overflow-x: auto;
     thead, tbody {
         border: 1px solid $border-color;
     }
